# g_chain

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  status_response.json  tailwind.config.js  tsconfig.json  vite.config.js
src/: main.jsx
src/GainChain_backend/: Cargo.toml  GainChain_backend.did  README.md  README_backend.md  structure.md
src/GainChain_backend/src/: data_models.rs  gen_ai.py  gen_ai.rs  lib.rs  llm.py  neural_network.rs
src/GainChain_backend/src/controllers/: auth_controller.rs  canvas_controller.rs  mod.rs  neural_net_controller.rs  project_controller.rs  recommendation_controller.rs  settings_controller.rs  testimonial_controller.rs  user_controller.rs
src/GainChain_backend/src/helpers/: storage_helper.rs
src/GainChain_backend/src/models/: canvas_model.rs  comment.rs  mod.rs  post.rs  project_model.rs  settings_model.rs  testimonial_model.rs  user.rs  user_model.rs
src/GainChain_backend/src/services/: auth_service.rs  email_service.rs  mod.rs  neural_net_service.rs  post_service.rs  project_service.rs  settings_service.rs  testimonial_service.rs  user_code_env.rs  user_service.rs  wallet.rs
src/GainChain_backend/src/services/recommendation_service/: gain_ai.rs  mod.rs
src/GainChain_backend/src/utils/: canister_utils.rs  mod.rs  stable_memory.rs
src/GainChain_frontend/: README-frontend  auth.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/SpadeChain_backend/: Cargo.toml  SpadeChain_backend.did
tests/: integration_test.rs  stro
(+85 files in other folders)
