[package]
name = "gain_chain_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10"
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11"
ndarray = "0.16.1"
bcrypt = "0.15"  
getrandom = { version = "0.2.15", features = ["js"] }  
ic-cdk-macros = "0.16"

nalgebra = "0.30"
chrono = "0.4"
async-std = "1.10"    # Async runtime
hyper = "0.14"        # HTTP library
