[package]
name = "gain_chain_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
candid = "0.10.10"
chrono = "0.4.38"
ic-cdk = "0.17.0"
ic-cdk-macros = "0.17.0"
log = "0.4.22"
nalgebra = "0.33.2"
ndarray = "0.16.1"
serde = "1.0.215"
serde_json = "1.0.133"
syntect = "5.2.0"
tokio = "1.41.1"


[dev-dependencies]
mockall = "0.11" # For unit testing
